--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,7 +57,7 @@
     <string name="nothing_all">Nothing is missing for the entire day.</string>
     <string name="back_button">Press again to exit</string>
     <string name="downloading">Loading\u2026</string>
-    <string name="footprint">This message was generated with the GymWen app.</string>
+    <string name="footprint">Generated with the GymWenApp: https://asdoi.gitlab.io/</string>
     <string name="noInternet">You are not connected to the internet!</string>
     <string name="noInternetConnection">No Internet connection!</string>
     <string name="share_vertretung">Send representation to\u2026</string>
