--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,8 +247,7 @@
     <string name="teacher_mail">Mail</string>
 
     <!-- Credits -->
-    <string name="credits" translatable="false"><![CDATA[<div>https://pixabay.com/vectors/book-found-fun-icon-icons-reading-1294379/</div>
-        <div>https://pixabay.com/vectors/icons-books-learning-book-icon-3439190/</div>
+    <string name="credits" translatable="false"><![CDATA[
         <div>Icons made by <a href="https://www.flaticon.com/authors/itim2101" title="itim2101">itim2101</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/mavadee" title="mavadee">mavadee</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
