--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="menu_call_office">Sekretariat anrufen</string>
     <string name="menu_public_transport">VGN</string>
     <string name="menu_forms">Formulare</string>
+    <string name="menu_from_this_developer">Auch von diesem Entwickler</string>
 
     <!-- Main -->
     <string name="action_share">Teilen</string>
