--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -291,5 +291,8 @@
     <string name="share_msg_nothing_hour_oberstufe">hour is missing for course</string>
     <string name="share_msg_hour_oberstufe">hour for course</string>
     <string name="share_msg_vertretung_at">Sit-in on</string>
+    <string name="menu_from_this_developer">By this developer</string>
+    <string name="missing_short">miss</string>
+    <string name="version">Version</string>
 
 </resources>
