added newspaper and maps navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="menu_public_transport">VGN</string>
     <string name="menu_forms">Formulare</string>
     <string name="menu_from_this_developer">Auch von diesem Entwickler</string>
+    <string name="menu_news">Schülerzeitung</string>
+    <string name="menu_navigation">Navigation</string>
 
     <!-- Main -->
     <string name="action_share">Teilen</string>
@@ -256,6 +258,7 @@
         <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         <div>Icons made by <a href="https://www.flaticon.com/authors/mavadee" title="mavadee">mavadee</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     ]]>
     </string>
 
