--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -315,7 +315,7 @@
     <!-- About Author -->
     <string name="show_intro">Einführung</string>
     <string name="fork_on_gitlab">Fork auf GitLab</string>
-    <string name="licenses">Lizenzen</string>
+    <string name="licenses">Lizenz</string>
     <string name="author">Autor</string>
     <string name="author_name" translatable="false">Felix Hollederer</string>
     <string name="write_email">Mail schreiben</string>
@@ -364,5 +364,35 @@
     <string name="share_msg_nothing_hour">Stunde entfällt</string>
     <string name="share_msg_hour">Stunde</string>
     <string name="share_msg_for_courses">für die Kurse</string>
+
+
+    <string name="gnu_license">
+        <![CDATA[
+        <strong>Diese Übersetzung ist kein rechtskräftiger Ersatz für die <a href="http://www.gnu.org/licenses/gpl.html">englischsprachige Originalversion</a>! </strong><br><p>
+        <blockquote>
+        <p><tt>
+        Copyright (C) [2019-2020]&nbsp;&nbsp;[<i>Felix Hollederer</i>]
+        </tt></p>
+        <p><tt>
+        Dieses Programm ist freie Software. Sie können es unter den
+        Bedingungen der GNU General Public License, wie von der Free
+        Software Foundation veröffentlicht, weitergeben und/oder
+        modifizieren, entweder gemäß Version 3 der Lizenz oder (nach
+        Ihrer Option) jeder späteren Version.
+        </tt></p>
+        <p><tt>
+        Die Veröffentlichung dieses Programms erfolgt in der Hoffnung,
+        daß es Ihnen von Nutzen sein wird, aber OHNE IRGENDEINE GARANTIE,
+        sogar ohne die implizite Garantie der MARKTREIFE oder der
+        VERWENDBARKEIT FÜR EINEN BESTIMMTEN ZWECK. Details finden Sie in
+        der GNU General Public License.
+        </tt></p>
+        <p><tt>
+        Sie sollten ein Exemplar der GNU General Public License zusammen
+        mit diesem Programm erhalten haben. Falls nicht, siehe
+        &lt;<a href="https://www.gnu.org/licenses/" >http://www.gnu.org/licenses/</a>&gt;.
+        </tt></p>
+        </blockquote>
+        ]]></string>
 
 </resources>
