--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,6 @@
     <string name="title_activity_settings">Einstellungen</string>
     <string name="set_vertretung_title">Vertretungsplan</string>
     <string name="set_courses_title">Kurse/Klasse</string>
-    <string name="set_courses_summary">Einzelne Kurse mit einem # zwischen den Kursen trennen, z.B. 1ph3#1d4#1bio2.</string>
     <string name="set_vertretung_signin">Anmeldedaten</string>
     <string name="set_vertretung_username">Benutzername:</string>
     <string name="set_vertretung_password">Passwort:</string>
@@ -66,7 +65,7 @@
     <string name="set_old_vertretung">Altes Design</string>
     <string name="set_design_title">Design</string>
     <string name="set_design_show_sections">Gefiltert \u0026 Gesamt einzeln anzeigen</string>
-    <string name="set_show_weekdates">Wochentage immer anzeigen.</string>
+    <string name="set_show_weekdates">Wochentage immer anzeigen</string>
     <string name="set_parents">Elternmodus</string>
     <string name="set_two_notifications">Tage einzeln als Benachrichtigung</string>
     <string name="set_choose_theme">Generelles Design</string>
@@ -351,7 +350,8 @@
     <!-- Registration -->
     <string name="dont_show_again">Nicht wieder anzeigen</string>
     <string name="registration_dialog_title">Nutzerzählung</string>
-    <string name="registration_dialog_content">Um herauszufinden, wie viele Personen diese App nutzen, möchte ich eine Nutzerzählung durchführen. Dabei werden Metadaten deiner Internetverbdingung, wie die IP-Adresse oder die Uhrzeit gespeichert.          Möchtest du daran teilnehmen?</string>
+    <string name="registration_dialog_content">Um herauszufinden, wie viele Personen diese App nutzen, möchte ich eine Nutzerzählung durchführen. Dabei werden (nur die) Metadaten deiner Internetverbdingung, wie die IP-Adresse oder die Uhrzeit gespeichert.\n
+        Möchtest du daran teilnehmen?</string>
 
     <!-- Quick Settings Tile -->
     <string name="tile_name">Benachr. anzeigen</string>
@@ -397,5 +397,36 @@
         </tt></p>
         </blockquote>
         ]]></string>
+
+
+    <!-- Settings descriptions -->
+    <string name="set_desc_courses">Einzelne Kurse mit einem # zwischen den Kursen trennen, z.B. 1ph3#1d4#1bio2</string>
+    <string name="set_desc_hours">Die Stundenanzeige durch die jeweilige Uhrzeit ersetzen, z.B. 8:10 statt 1</string>
+    <string name="set_desc_week_dates">Immer den zum Datum gehörenden Wochentag anzeigen (auch wenn der Tag schon vergangen ist)</string>
+    <string name="set_desc_show_full_names">Alle Lehrerkürzel durch den jeweiligen Nachnamen ersetzen</string>
+    <string name="set_desc_credentials_fragment">Einstellungen für das Herunterladen des Vertretungsplans/Lehrerliste</string>
+
+    <string name="set_desc_username">Der Benutzername für den Vertretungsplan</string>
+    <string name="set_desc_password">Das Passwort für den Vertretungsplan</string>
+    <string name="set_desc_today_url">Link zum ersten Tag (üblicherweise der heutige Tag)</string>
+    <string name="set_desc_tomorrow_url">Link zum zweiten Tag (üblicherweise der morgige Tag)</string>
+    <string name="set_desc_teacherlist_url">Link zur Lehrerliste</string>
+
+    <string name="set_desc_accentColor">Die Farbe mit der Wichtiges hervorgehoben wird, z.B. die Stunden beim Vertretungsplan</string>
+    <string name="set_desc_primaryColor">Die Farbe der Titelleiste</string>
+    <string name="set_desc_menu_items_fragment">Bestimmte Einträge der Navigationsleiste verbergen oder anzeigen</string>
+    <string name="set_desc_show_borders">Alle Lehrerkürzel, die angeklickt werden können, umranden</string>
+    <string name="set_desc_old_vertretung">Altes Aussehen des Vertretungsplans (kann auch über die Farbpalette in der Titelleiste geändert werden)</string>
+
+    <string name="set_desc_alwaysNotification">Die Benachrichtigung kann nur noch manuell ausgeblendet werden</string>
+    <string name="set_desc_two_notifs">Für jeden Tag eine eigene Benachrichtigung anzeigen</string>
+    <string name="set_desc_alarm">Die Benachrichtigung zu einer bestimmten Uhrzeit anzeigen</string>
+
+    <string name="set_desc_vertretungsplan_fragment">Spezifische Einstellungen für den Vertretungsplan</string>
+    <string name="set_desc_design_fragment">Einstellungen zur Veränderung der Darstellung</string>
+    <string name="set_desc_notification_fragment">Einstellungen für die Benachrichtigung</string>
+    <string name="set_desc_parents">Bestimmte Funktionen aktivieren, die v.a. für Eltern nützlich sind, z.B. ClaXss</string>
+    <string name="set_desc_updates">Auf Aktualisierungen überprüfen</string>
+    <string name="set_desc_offline_mode">Bestimmte Dinge lokal speichern, damit die App ohne Internet funktioniert</string>
 
 </resources>
