--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_category_other">Various apps</string>
     <string name="menu_category_school">High school</string>
     <string name="menu_category_settings">Settings</string>
-    <string name="menu_category_vertretung">Cover plan</string>
+    <string name="menu_category_substitution">Cover plan</string>
     <string name="menu_both">At a glance!</string>
     <string name="menu_impressum">About</string>
     <string name="menu_update">Updates</string>
@@ -36,21 +36,21 @@
 
 
     <string name="title_activity_settings">Settings</string>
-    <string name="set_vertretung_title">Cover plan</string>
+    <string name="set_substitution_title">Cover plan</string>
     <string name="set_courses_title">Courses/Classes</string>
     <string name="set_desc_courses">Divide individual courses with a # between them, e.g. 1ph3#1d4#1bio2</string>
-    <string name="set_vertretung_signin">Credentials</string>
-    <string name="set_vertretung_username">User name:</string>
-    <string name="set_vertretung_password">Password:</string>
+    <string name="set_substitution_signin">Credentials</string>
+    <string name="set_substitution_username">User name:</string>
+    <string name="set_substitution_password">Password:</string>
     <string name="set_notification_title">Notification</string>
-    <string name="set_notifiaction_isOn">Show notification</string>
+    <string name="set_substitution_isOn">Show notification</string>
     <string name="set_notification_showAlways">Show permanently</string>
     <string name="set_hours">Show times instead of hours</string>
     <string name="set_show_borders">Outline the teachers</string>
     <string name="set_show_borders_specific">Filtered plan only</string>
     <string name="set_other_title">Others</string>
     <string name="set_beta_features">Beta Features</string>
-    <string name="set_old_vertretung">Old design</string>
+    <string name="set_old_substitution">Old design</string>
 
 
     <string name="nothing">Nothing is missing for you.</string>
@@ -60,7 +60,7 @@
     <string name="footprint">Generated with the GymWenApp: https://asdoi.gitlab.io/</string>
     <string name="noInternet">You are not connected to the internet!</string>
     <string name="noInternetConnection">No Internet connection!</string>
-    <string name="share_vertretung">Send representation to\u2026</string>
+    <string name="share_substitution_plan">Send representation to\u2026</string>
     <string name="day_past">(Past)</string>
 
 
@@ -290,7 +290,7 @@
     <string name="share_msg_nothing_hour">hour is missing</string>
     <string name="share_msg_nothing_hour_oberstufe">hour is missing for course</string>
     <string name="share_msg_hour_oberstufe">hour for course</string>
-    <string name="share_msg_vertretung_at">Sit-in on</string>
+    <string name="share_msg_substitution_at">Sit-in on</string>
     <string name="menu_from_this_developer">By this developer</string>
     <string name="version">Version</string>
     <string name="gnu_license">
