--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -257,7 +257,7 @@
     <string name="intro_four_title">Parent mode</string>
     <string name="intro_three_title">Teacherlist</string>
     <string name="intro_two_title">Sit-in</string>
-    <string name="error">An error occured</string>
+    <string name="error">An error occurred</string>
     <string name="set_choose_theme">Choose theme</string>
     <string name="set_theme_auto">Automatic</string>
     <string name="set_theme_black">Black</string>
@@ -266,7 +266,7 @@
     <string name="imprint">Imprint</string>
     <string name="dont_show_again">Don\'t show again</string>
     <string name="registration_dialog_title">User census</string>
-    <string name="registration_dialog_content">To get to know, how many users this app has, I want to make a user census. Therefore some metadata of your internet connection will be transmitted and saved, like your ip-adress or the current time.
+    <string name="registration_dialog_content">To get to know, how many users this app has, I want to make a user census. Therefore some metadata of your internet connection will be transmitted and saved, like your ip-address or the current time.
     \nDo you want to get involved?</string>
     <string name="classes_short">C</string>
     <string name="courses_short">C</string>
