added click picture to minimize message in website

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,7 @@
     <string name="action_open_in_browser">Im Browser öffnen</string>
     <string name="share_link">Link teilen mit\u2026</string>
     <string name="error">Es ist ein Fehler aufgetreten.</string>
+    <string name="click_picture">Bild anklicken</string>
 
     <!-- Notification-->
     <string name="notification_channel_title">Vertretungsplan</string>
