--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,8 +89,8 @@
 
 
     <!-- SubstitutionPlan -->
-    <string name="nothing">Es entfällt nichts für dich.</string>
-    <string name="nothing_all">Es entfällt nichts für den gesamten Tag.</string>
+    <string name="nothing">Keine Vertretungen für dich.</string>
+    <string name="nothing_all">Es gibt keine Vertretungen am gesamten Tag.</string>
     <string name="back_button">Erneut drücken zum Beenden.</string>
     <string name="downloading">Lädt\u2026</string>
     <string name="footprint">Mit der GymWen App erzeugt: https://asdoi.gitlab.io/</string>
